2003-10-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* complete.el (PC-do-completion): Do not forget to use `pred' as the
	default-directory when completing file names.

2003-10-20  Luc Teirlinck  <teirllm@auburn.edu>

	* help-mode.el (help-make-xrefs): Make sure that if a symbol is
	followed by the word `face', it gets treated as a face, even if
	it is also defined as a variable or a function.

2003-10-20  Dave Love  <fx@gnu.org>

	* emacs-lisp/easy-mmode.el (easy-mmode-define-navigation):
	Avoid incf in macro expansion.

2003-10-20  John Paul Wallington  <jpw@gnu.org>

	* emacs-lisp/elint.el (elint-check-defcustom-form): Don't use
	`evenp'	so we don't implicitly require cl library at runtime.

2003-10-18  Luc Teirlinck  <teirllm@auburn.edu>

	* help-mode.el (help-xref-symbol-regexp): Treat newlines as whitespace.
	(help-make-xrefs): Only make cross-references for faces if
	preceded or followed by the word `face'.  Do not make a
	cross-reference for variables without variable documentation,
	unless preceded by the word `variable' or `option'.  Update doc
	string accordingly.

2003-10-18  Thien-Thi Nguyen  <ttn@gnu.org>

	* progmodes/hideshow.el: Rewrite one-armed `if'
	constructs using either `when' or `unless'.
	(hs-grok-mode-type): Elide superfluous `progn'; nfc.

2003-10-16  Nick Roberts  <nick@nick.uklinux.net>

	* gdb-ui.el (breakpoint-xpm-data, breakpoint-enabled-pbm-data)
	(breakpoint-disabled-pbm-data): Make breakpoint icons 10x10
	instead of 12x12.

2003-10-16  Eli Zaretskii  <eliz@elta.co.il>

	* mail/rmail.el (rmail-convert-to-babyl-format): Display a
	message while converting to Babyl.

2003-10-16  Vadim Nasardinov  <vadimn@redhat.com>  (tiny change)

	* allout.el (allout-mode): Doc fix.

2003-10-16  Lute Kamstra  <lute@gnu.org>

	* subr.el (force-mode-line-update): Fix docstring.

2003-10-14  Dave Love  <fx@gnu.org>

	* international/mule-cmds.el (find-multibyte-characters): Doc fix.
	(default-input-method): Add :link, improve :type.